feat(Main): Add temp index.html

--- a/index.html
+++ b/index.html
@@ -1,31 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/style.css" rel="stylesheet" />
-    <script src="script.js"></script>
-    <title>De Profundis</title>
-</head>
-<body>
-    <h1> <div class="typewriter">
-        <div class="typewriter-text">
-            O co tutaj chodzi  
-        </div>
-    </div>
-</h1>
-    <p>
-        Jeśli to czytasz to najprawdopodobniej w twoje ręce wpadł mój list. Zostałeś zaproszony do gry epistolarnej pod tytułem "De Profundis" autorstwa Michała Oracza(twórcy chociażby takiego hitu jak Neuroshima Hex)
-    </p>
-    <p> <h4>Czym jest gra epistolarna ? </h4></p>
-    <p>Jest to gra w której całość opiera się na wymianie korespondencji pomiędzy graczami. I to tyle. Wpadłem na to ponieważ uważam że ciągły brak czasu oraz odległości między nami nie pozwalają nam na regularne oddawanie się grom RPG, więc można by spróbować takiej formy rozrywki, wymagającej może 1h tygodniowo, aby porządnie przysiąść i napisać list przesiąknięty klimatem, groteską i szaleństwem</p>
+<main>
 
-    <p><h4>Jak się w to gra ?</h4></p>
-    <p>Jak wspomniałem wyżej gra będzie polegała na wymianie korespondencji, wcielasz się w jakąś postać w jakimś świecie, który najpierw z góry ustalamy, zakładamy jakiś ogólny scenariusz, np jeden z nas był świadkiem jakiegoś dziwnego wydarzenia i potrzebuje pomocy w rozwikłaniu tego zdarzenia. Oczywiście można też grać samym sobą, tu i teraz w naszych realiach. Zasadniczą cechą jest tempo rozrywki, które co prawda nie wyrywa z butów, ale pozwala na powolne i swobodne budowanie świata</p>
-    <p>Link do zeskanowanego podręcznika do gry <a href="https://drive.google.com/drive/folders/1RzZDYKhWmYWLSgg2vJv-xiSpsmoR92-X?usp=sharing"> jest o tutaj </a></p>
-    <p>Dzięki temu możesz poznać lepiej zasady i samą idee, dodatkowo na samym końcu jest przykładowa gra, warto by to przeczytać żeby zrozumieć koncepcję jaka za tym stoi</p>
-    <p>Jeśli jesteś na tak, to skorzystaj z poniższego linku do ankiety, odpowiedz na parę pytań i czekaj na kolejny list !</p>
-    <p><a href="https://forms.gle/XtLaFgT2fBMGBJ1u7">Link do ankiety</a></p>
-</body>
-</html>
+    <div>
+        Portfolio w budowie, zapraszam na <a href="https://www.linkedin.com/in/paweljanusz">Linkedin</a>
+    </div>
+
+</main>
+
+<style>
+    body {
+        background: white;
+        font-size: 80%;
+        padding: 20px;
+    }
+
+    main {
+        position: relative;
+        background: white;
+        height: 200px;
+        width: 60%;
+        margin: 0 auto;
+        padding: 20px;
+    }
+
+    main div {
+        background: #ddd;
+        color: black;
+        width: 50%;
+        transform: translate(-50%, -50%);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        padding: 20px;
+
+        overflow: auto;
+    }
+</style>
