feat(first project): Almost done first project

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>Twoje Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
 
-
-
     <script src="https://kit.fontawesome.com/6f3ec04ccb.js" crossorigin="anonymous"></script>
 
     <script type="module" src="script.js"></script>
@@ -47,22 +45,16 @@
             <h2 class="divider" data-translate="projects">Projekty</h2>
 
             <div class="project-list">
-                <div class="project-card" data-project-id="projekt1">
-                    <img src="mapa.jpeg" alt="Projekt 1">
-                    <h3 data-translate="project-name1">Nazwa Projektu 1</h3>
-                    <p data-translate="project-desc1">Krótki opis projektu 1</p>
-
-                </div>
 
                 <a href="projekt1.html" data-project-id="projekt1" class="project-card">
-                    <img src="mapa.jpeg" alt="Projekt 1">
+                    <img src="marineverse.jpeg" alt="Projekt 1">
                     <h3 data-translate="project-name1">Nazwa Projektu 1</h3>
                     <p data-translate="project-desc1">Krótki opis projektu 1</p>
                 </a>
             </div>
         </section>
 
-        <section id="hobby-projects">
+        <!-- <section id="hobby-projects">
             <h2 class="divider" data-translate="hobby-projects">Projekty w wolnym czasie</h2>
             <div class="project-list">
                 <div class="project-card" data-project-id="projekt1">
@@ -70,41 +62,29 @@
                     <h3 data-translate="project-name1">Nazwa Projektu 1</h3>
                     <p data-translate="project-desc1">Krótki opis projektu 1</p>
                 </div>
-                <div class="project-card" data-project-id="projekt1">
-                    <img src="mapa.jpeg" alt="Projekt 1">
-                    <h3 data-translate="project-name1">Nazwa Projektu 1</h3>
-                    <p data-translate="project-desc1">Krótki opis projektu 1</p>
-                </div>
-                <div class="project-card" data-project-id="projekt1">
-                    <img src="mapa.jpeg" alt="Projekt 1">
-                    <h3 data-translate="project-name1">Nazwa Projektu 1</h3>
-                    <p data-translate="project-desc1">Krótki opis projektu 1</p>
-                </div>
-                <div class="project-card" data-project-id="projekt1">
-                    <img src="mapa.jpeg" alt="Projekt 1">
-                    <h3 data-translate="project-name1">Nazwa Projektu 1</h3>
-                    <p data-translate="project-desc1">Krótki opis projektu 1</p>
-                </div>
-                <!-- Podobnie jak wyżej, karty dla projektów hobbystycznych -->
             </div>
-        </section>
+        </section> -->
 
         <section id="about-me">
             <h2 class="divider" data-translate="about-me">
                 O mnie
             </h2>
+            <p data-translate="about-me-content">
+
+            </p>
         </section>
 
         <section id="contact">
             <h2 class="divider" data-translate="contact">
                 Kontakt
             </h2>
+            <text><i class="fa-solid fa-envelope"></i> pawelj_janusz@wp.pl</text>
         </section>
     </main>
 
 
     <footer>
-        <p>© 2024 Twoje Imię</p>
+        <p>© 2024 Paweł Janusz</p>
     </footer>
 </body>
 
