feat(first project): TBC

--- a/index.html
+++ b/index.html
@@ -45,12 +45,24 @@
             <h2 class="divider" data-translate="projects">Projekty</h2>
 
             <div class="project-list">
-
-                <a href="projekt1.html" data-project-id="projekt1" class="project-card">
+                <div class="project-card" data-project-id="projekt1">
                     <img src="marineverse.jpeg" alt="Projekt 1">
                     <h3 data-translate="project-name1">Nazwa Projektu 1</h3>
                     <p data-translate="project-desc1">Krótki opis projektu 1</p>
-                </a>
+
+                </div>
+
+                <div class="project-card" data-project-id="projekt1">
+                    <h3>W trakcie tworzenia</h3>
+                    <p>Wkrótce</p>
+                </div>
+
+                <div class="project-card" data-project-id="projekt1">
+                    <h3>W trakcie tworzenia</h3>
+                    <p>Wkrótce</p>
+                </div>
+
+
             </div>
         </section>
 
