feat(MarineVerseCup): Add project1

--- a/index.html
+++ b/index.html
@@ -45,21 +45,23 @@
             <h2 class="divider" data-translate="projects">Projekty</h2>
 
             <div class="project-list">
-                <div class="project-card" data-project-id="projekt1">
-                    <img src="marineverse.jpeg" alt="Projekt 1">
+                <a href="projekt1.html" class="project-card" data-project-id="projekt1">
+                    <img src="project1/project1_2.jpeg" alt="Projekt 1">
                     <h3 data-translate="project-name1">Nazwa Projektu 1</h3>
                     <p data-translate="project-desc1">Krótki opis projektu 1</p>
 
+                </a>
+
+                <div class="project-card" data-project-id="projekt2">
+                    <img src="riggingdrill.png" alt="Projekt 2">
+                    <h3 data-translate="project-name2">Rigging Drill</h3>
+                    <p data-translate="project-desc2">Mixed Reality App</p>
                 </div>
 
-                <div class="project-card" data-project-id="projekt1">
-                    <h3>W trakcie tworzenia</h3>
-                    <p>Wkrótce</p>
-                </div>
-
-                <div class="project-card" data-project-id="projekt1">
-                    <h3>W trakcie tworzenia</h3>
-                    <p>Wkrótce</p>
+                <div class="project-card" data-project-id="projekt3">
+                    <img src="kayaking.png" alt="Projekt 3">
+                    <h3 data-translate="project-name3">MarineVerse Kayaking</h3>
+                    <p data-translate="project-desc3">VR Kayaking Game</p>
                 </div>
 
 
