feat(RD): Add project2

--- a/index.html
+++ b/index.html
@@ -51,18 +51,19 @@
                     <p data-translate="project-desc1">Krótki opis projektu 1</p>
 
                 </a>
+                <a href="projekt2.html" class="project-card" data-project-id="projekt2">
+                    <img src="project2/project2_1.png" alt="Projekt 2">
+                    <h3 data-translate="project-name2">Nazwa Projektu 1</h3>
+                    <p data-translate="project-desc2">Krótki opis projektu 1</p>
 
-                <div class="project-card" data-project-id="projekt2">
-                    <img src="riggingdrill.png" alt="Projekt 2">
-                    <h3 data-translate="project-name2">Rigging Drill</h3>
-                    <p data-translate="project-desc2">Mixed Reality App</p>
-                </div>
+                </a>
 
-                <div class="project-card" data-project-id="projekt3">
-                    <img src="kayaking.png" alt="Projekt 3">
-                    <h3 data-translate="project-name3">MarineVerse Kayaking</h3>
-                    <p data-translate="project-desc3">VR Kayaking Game</p>
-                </div>
+                <a href="projekt3.html" class="project-card" data-project-id="projekt3">
+                    <img src="project3/project3_1.png" alt="Projekt 3">
+                    <h3 data-translate="project-name3">Nazwa Projektu 1</h3>
+                    <p data-translate="project-desc3">Krótki opis projektu 1</p>
+
+                </a>
 
 
             </div>
