--- a/projekt2.html
+++ b/projekt2.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MarineVerse Cup</title>
+    <title>Rigging Drill</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
@@ -34,57 +34,53 @@
     <div class="project-container">
         <header>
             <a href="index.html" class="close-button"><i class="fa-solid fa-xmark"></i></a>
-            <h1 class="projectName">MarineVerse Cup</h1>
+            <h1 class="projectName">Rigging Drill</h1>
             <!-- Reszta nagłówka -->
         </header>
         <main>
             <div class="owl-carousel owl-theme">
 
-                <img src="project1/project1_2.jpeg" class="item">
-                <img src="project1/project1_1.jpeg" class="item">
-                <img src="project1/project1_3.jpeg" class="item">
-                <img src="project1/project1_5.jpeg" class="item">
+                <img src="project2/project2_1.png" class="item">
+                <img src="project2/project2_2.png" class="item">
+                <img src="project2/project2_3.png" class="item">
             </div>
 
 
             <section class="project-details">
                 <h2 class="divider">Informacje o Projekcie</h2>
-                <p><strong><i class="fa-solid fa-sailboat" id="accentColor"></i> Nazwa projektu:</strong> MarineVerse
-                    Cup</p>
-                <p><strong><i class="fa-solid fa-sailboat" id="accentColor"></i> Opis:</strong> Gra o żeglowaniu w VR,
-                    stawiająca na
-                    realizm i naukę</p>
+                <p><strong><i class="fa-solid fa-sailboat" id="accentColor"></i> Nazwa projektu:</strong> Rigging Drill
+                    by MarineVerse</p>
+                <p><strong><i class="fa-solid fa-sailboat" id="accentColor"></i> Opis:</strong> Aplikacja pokazująca
+                    możliwości mieszanej rzeczywistości, takich jak nauka wiązania węzłów!</p>
                 <p><strong><i class="fa-solid fa-sailboat" id="accentColor"></i> Użyte technologie:</strong> Unity,
-                    Oculus SDK, Blender
-                    3D, PhysX, Steam SDK, Photon</p>
+                    Oculus SDK, Blender, Gravity Sketch</p>
                 <p><strong><i class="fa-solid fa-sailboat" id="accentColor"></i> Cel projektu:</strong> Projekt
-                    komercyjny</p>
-                <p><strong><i class="fa-solid fa-sailboat" id="accentColor"></i> Moja rola:</strong> Byłem programistą
-                    oraz projektantem
-                    gameplayu. Ze względu na mały team,
-                    zajmowałem się programowaniem wszystkiego przez UI, gameplay, shadery po SI, okazjonalnie wspierałem
-                    projekt jako grafik 3D oraz 2D. W zasadzie tylko nie komponowałem muzyki. </p>
-                <i class="fa-solid fa-globe" id="accentColor"></i> Link: <a href="https://www.marineverse.com"
-                    class="normal">MarineVerse</a>
+                    promujący mieszaną rzeczywistość</p>
+                <p><strong><i class="fa-solid fa-sailboat" id="accentColor"></i> Moja rola: </strong>Została mi
+                    powierzona rola całkowitego stworzenia tego projektu. Miała to być aplikacja wykorzystująca funkcje
+                    gogli Meta Quest 3. Udało mi się przejść od konceptu do wydania aplikacji na Questa.</p>
+                <i class="fa-solid fa-globe" id="accentColor"></i> Link: <a
+                    href="https://www.meta.com/pl-pl/experiences/6128861297199686/" class="normal">Rigging Drill</a>
             </section>
 
             <section class="report">
                 <h2 class="divider">Podsumowanie</h2>
-                <p><strong><i class="fa-solid fa-anchor" id="accentColor"></i> Wyzwania:</strong> Optymalizacja pracy
-                    aby wyrobić się z planowanymi funkcjami. Utrzymanie stabilnej liczby klatek na sekundę dla platform
-                    Oculus Quest 2 i 3. Praca z zespołem w innej strefie czasowej, sprawiała że przez większą część dnia
-                    pracowałem samodzielnie.</p>
-                <p><strong><i class="fa-solid fa-anchor" id="accentColor"></i> Nauka:</strong> Projekt ten nauczył mnie
-                    lepszego zarządzania czasem, oraz lepszego szacowania czasu potrzebnego na zadanie. Rozwinąłem
-                    wszechstronnie swoje zdolności programistyczne, musiały sprostać różnym typom zadań. Dowiedziałem
-                    się wiele na temat procesu wydawania gry na platformę Quest, wiem jak przejść proces certyfikacji.
-                </p>
-                <p><strong><i class="fa-solid fa-anchor" id="accentColor"></i> Ocena projektu:</strong> Był to mój
-                    pierwszy komercyjny projekt w branży gier. Dowiedziałem się jak to jest zarabiać na życie robiąc
-                    gry. Bardzo lubiłem pracę nad żeglowaniem w VR, jednak brakowało mi kontaktu z zespołem, który z
-                    przyczyn odległości, nie zawsze mógl służyć pomocą.</p>
+                <p><strong><i class="fa-solid fa-anchor" id="accentColor"></i> Wyzwania:</strong> Głównym wyzwaniem było
+                    zaprojektowanie intuicyjnego interfejsu użytkownika, który integrowałby komendy głosowe, kontrolery
+                    oraz interakcję dłoni. Byłem odpowiedzialny za cały projekt, od koncepcji po wdrożenie, co wymagało
+                    skupienia na zapewnieniu płynnego i angażującego doświadczenia użytkownika.</p>
+                <p><strong><i class="fa-solid fa-anchor" id="accentColor"></i> Nauka:</strong> Projekt ten nauczył mnie,
+                    jak wykorzystać zaawansowane funkcje MetaQuest 3, takie jak pass-through, śledzenie dłoni, komendy
+                    głosowe i spatial anchors. Zdobyłem cenne doświadczenie w tworzeniu aplikacji MR, które są
+                    intuicyjne i angażujące dla użytkowników.</p>
+                <p><strong><i class="fa-solid fa-anchor" id="accentColor"></i> Ocena projektu:</strong> Chociaż to nie
+                    był projekt komercyjny, aplikacja stała się popularna i dobrze przyjęta. Użytkownicy byli pod
+                    wrażeniem możliwości MR, szczególnie z programu do wiązania
+                    węzłów. To doświadczenie pokazało, jak technologia może wzbogacać interakcje w codziennym życiu.</p>
                 <!-- Tutaj możesz dodać więcej treści, jak listy, galerie, filmy, itd. -->
             </section>
+
+
 
             <!-- Dodatkowe sekcje według potrzeb -->
         </main>
