fix(Project3): Remove incomplete link to subpage

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 
                 </a>
 
-                <a href="projekt3.html" class="project-card" data-project-id="projekt3">
+                <div class="project-card" data-project-id="projekt3">
                     <img src="project3/project3_1.png" alt="Projekt 3">
                     <h3 data-translate="project-name3">Nazwa Projektu 1</h3>
                     <p data-translate="project-desc3">Krótki opis projektu 1</p>
 
-                </a>
+                </div>
 
 
             </div>
