feat(Hobby): Add hobby projects

--- a/index.html
+++ b/index.html
@@ -69,16 +69,35 @@
             </div>
         </section>
 
-        <!-- <section id="hobby-projects">
+        <section id="hobby-projects">
             <h2 class="divider" data-translate="hobby-projects">Projekty w wolnym czasie</h2>
             <div class="project-list">
-                <div class="project-card" data-project-id="projekt1">
-                    <img src="mapa.jpeg" alt="Projekt 1">
-                    <h3 data-translate="project-name1">Nazwa Projektu 1</h3>
-                    <p data-translate="project-desc1">Krótki opis projektu 1</p>
-                </div>
+                <a href="https://www.gov.pl/web/govtech/najwiekszy-hackathon-w-europie-poznaj-zwyciezcow"
+                    class="project-card" data-project-id="projekt1">
+                    <img src="sKumajKod/skumajKod_3.png" alt="Projekt 1">
+                    <h3>sKumajKod</h3>
+                    <p>1 miejsce w największym hackatonie w Europie</p>
+                </a>
+                <a href="https://crpk.pl/wydarzenia/copernicus-game-jam" class="project-card"
+                    data-project-id="projekt2">
+                    <img src="oniebolepiej/oniebolepiej.png" alt="Projekt 2">
+                    <h3>O niebo lepiej</h3>
+                    <p>Zwycięstwo w Copernicus GameJam 2022</p>
+                </a>
+                <a href="https://crpk.pl/wydarzenia/gamejam-10-2023" class="project-card" data-project-id="projekt3">
+                    <img src="fredro/fredro.png" alt="Projekt 3">
+                    <h3>ALEKS_FRETRO</h3>
+                    <p>Zwycięstwo w Fedro GameJam 2023</p>
+                </a>
+                <a href="https://gliwicki.pl/aktualnosci/bit-festival-2022-dobiegl-konca" class="project-card"
+                    data-project-id="projekt4">
+                    <img src="bitfestival/bitfestival.JPG" alt="Projekt 4">
+                    <h3>SPARK_RUNNER</h3>
+                    <p>Zwycięstwo w BitFestival 2022</p>
+                </a>
             </div>
-        </section> -->
+
+        </section>
 
         <section id="about-me">
             <h2 class="divider" data-translate="about-me">
