--- a/projekt1.html
+++ b/projekt1.html
@@ -64,7 +64,7 @@
                     gameplayu. Ze względu na mały team,
                     zajmowałem się programowaniem wszystkiego przez UI, gameplay, shadery po SI, okazjonalnie wspierałem
                     projekt jako grafik 3D oraz 2D. W zasadzie tylko nie komponowałem muzyki. </p>
-                <i class="fa-solid fa-globe" id="accentColor"></i> Link: <a href="https://www.marineverse.com"
+                <i class="fa-solid fa-globe" id="accentColor"></i> <a href="https://www.marineverse.com"
                     class="normal">MarineVerse</a>
             </section>
 
