--- a/projekt2.html
+++ b/projekt2.html
@@ -59,7 +59,7 @@
                 <p><strong><i class="fa-solid fa-sailboat" id="accentColor"></i> Moja rola: </strong>Została mi
                     powierzona rola całkowitego stworzenia tego projektu. Miała to być aplikacja wykorzystująca funkcje
                     gogli Meta Quest 3. Udało mi się przejść od konceptu do wydania aplikacji na Questa.</p>
-                <i class="fa-solid fa-globe" id="accentColor"></i> Link: <a
+                <i class="fa-solid fa-globe" id="accentColor"></i> <a
                     href="https://www.meta.com/pl-pl/experiences/6128861297199686/" class="normal">Rigging Drill</a>
             </section>
 
